--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "1.1"
+version = "1.3"
 group = "me.dj.spatialserver" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "spatialservermod"
 
@@ -34,7 +34,8 @@ minecraft {
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
-repositories {
+repositories
+{
     maven {
         name 'ForgeFS'
         url 'http://files.minecraftforge.net/maven'
